--- a/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
+++ b/docs/site_libs/quarto-html/quarto-syntax-highlighting.css
@@ -32,6 +32,10 @@
 }
 
 /* other quarto variables */
+:root {
+  --quarto-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 code span {
   color: #00769E;
 }
